Code inspection and formatting fixes
Fixed dangling JavaDoc comments, caused by JavaDocs being after annotations when they should be before.
Removed unused class TestHelper.